--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,18 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* Light theme */
+  --background: #ffffff;
+  --text: #213547;
+  --border-color: #e5e7eb;
+  --hover-background: #f3f4f6;
+
+  /* Dark theme */
+  --dark-background: #1a1b1e;
+  --dark-text: #e5e7eb;
+  --dark-border-color: #374151;
+  --dark-hover-background: #2d3748;
 }
 
 * {
@@ -20,6 +32,7 @@
 }
 
 body {
+  margin: 0;
   min-width: 320px;
   min-height: 100vh;
 }
